syntax = "proto3";

package pb;

option go_package = "github.com/vovabndr/card-validator/pb";

message PaymentCard {
  int64 card_number = 1;
  int64 expiration_month = 2;
  int64 expiration_year = 3;
}